@@ -11,6 +11,14 @@ if ~isfield(scan.loops, 'ramptime')
      [scan.loops.ramptime] = deal([]);
 end
 
+fprintf('Global transformations:\n-----------------------\n');
+
+if isfield(scan, 'trafofn')
+    for i = 1:length(scan.trafofn)
+        fprintf('%s\n%', func2str(scan.trafofn{i}));
+    end
+end
+fprintf('\n');
 
 for i = 1:length(scan.loops)
 
@@ -18,6 +26,8 @@ for i = 1:length(scan.loops)
     
     if isempty(scan.loops(i).npoints)
         scan.loops(i).npoints = length(scan.loops(i).rng);
+    elseif isempty(scan.loops(i).rng)
+        scan.loops(i).rng = 1:scan.loops(i).npoints;
     end
     
     if isempty(scan.loops(i).ramptime)
@@ -32,7 +42,8 @@ for i = 1:length(scan.loops)
     fprintf('\nRamptimes    : ')
     fprintf('%-4.2d s/point    ', scan.loops(i).ramptime);
     if isfield(scan.loops(i), 'trafofn')
-            fprintf('\nTransform''s  : ')
+            fprintf('\nTransform''s  : '
+            )
             for j = 1:length(scan.loops(i).trafofn)
                 if isempty(scan.loops(i).trafofn{j})
                      fprintf('%-15s ', 'identity');
@@ -47,10 +58,3 @@ for i = 1:length(scan.loops)
     fprintf('\n\n');
 end
 
-fprintf('Global transf''s':)
-
-if isfield(scan, 'trafofn')
-    for i = 1:length(scan.trafofn)
-    fprintf('%-15s: %s%s\n', func2str(scan.trafofn{1}));
-end
-    
