@@ -295,22 +295,26 @@ end
 
 % determine the next available figure after 1000 for this measurement.  A
 % figure is available unless its userdata field is the string 'SMactive'
-figurenumber=1000;
 if isfield(scan,'figure')
     figurenumber=scan.figure;
-if isnan(figurenumber)
-    figurenumber = 1000;
-    while ishandle(figurenumber) && strcmp(get(figurenumber,'userdata'),'SMactive')
-        figurenumber=figurenumber+1;
+    if isnan(figurenumber)
+        figurenumber = 1000;
+        while ishandle(figurenumber) && strcmp(get(figurenumber,'userdata'),'SMactive')
+            figurenumber=figurenumber+1;
+        end
     end
-    if ~ishandle(figurenumber);
-        figure(figurenumber)
-        set(figurenumber, 'pos', [10, 10, 800, 400]);
-    else
-        figure(figurenumber);
-        clf;
-    end
+else
+    figurenumber=1000;
 end
+if ~ishandle(figurenumber);
+    figure(figurenumber)
+    set(figurenumber, 'pos', [10, 10, 800, 400]);
+else
+    figure(figurenumber);
+    clf;
+end
+
+
 set(figurenumber,'userdata','SMactive'); % tag this figure as being used by SM
 set(figurenumber, 'CurrentCharacter', char(0));
 
@@ -381,14 +385,20 @@ for i = 1:length(disp)
 end  
 
 x = zeros(1, nloops);
-val = zeros(1, max(nsetchan));
-val2 = zeros(1, max(nsetchan));
 %filename = sprintf('sm_%02d%02d%02d_%02d%02d')
 
 
 configvals = cell2mat(smget(smdata.configch));
 configch = {smdata.channels(smchanlookup(smdata.configch)).name};
-configdata = fncall(smdata.configfn);
+
+configdata = cell(1, length(smdata.configfn));
+for i = 1:length(smdata.configfn)
+    if iscell(smdata.configfn)
+        configdata{i} = smdata.configfn{i}();
+    else
+        configdata{i} = smdata.configfn(i).fn(smdata.configfn(i).args);   
+    end
+end
 
 if nargin >= 2
     save(filename, 'configvals', 'configdata', 'scan', 'configch');
@@ -419,10 +429,8 @@ for i = 1:totpoints
 
     for j = fliplr(loops)
         
-        for k = 1:nsetchan(j)
-            val(k) = scandef(j).trafofn{k}(xt, smdata.chanvals);
-        end    
-
+        val = trafocall(scandef(j).trafofn, xt, smdata.chanvals);
+        
         autochan = scandef(j).ramptime < 0;
         scandef(j).ramptime(autochan) = min(scandef(j).ramptime(autochan));
         % this is a bit of a hack
@@ -444,9 +452,7 @@ for i = 1:totpoints
                     x2 = scan.trafofn{k}(x2);
                 end
 
-                for k = 1:nsetchan(j)
-                    val2(k) = scandef(j).trafofn{k}(x2, smdata.chanvals);
-                end
+                val2 = trafocall(scandef(j).trafofn, x2, smdata.chanvals);
 
                 % compute ramp rate for all steps.
                 ramprate{j} = abs((val2(1:nsetchan(j))-val(1:nsetchan(j))))'...
@@ -602,27 +608,29 @@ if nargin >= 2
 end
 end
 
-function res = fncall(fns, varargin)   
-    if nargout > 0
-        res = cell(1, length(fns));
-        if iscell(fns)
-            for i = 1:length(fns)
-                res{i} = fns{i}(varargin{:});
-            end
-        else
-            for i = 1:length(fns)
-                res{i} = fns(i).fn( varargin{:}, fns(i).args{:});
-            end
-        end
-    else
-        if iscell(fns)
-            for i = 1:length(fns)
-                fns{i}(varargin{:});
-            end
-        else
-            for i = 1:length(fns)
-                fns(i).fn(varargin{:}, fns(i).args{:});
-            end
-        end
+function fncall(fns, varargin)   
+if iscell(fns)
+    for i = 1:length(fns)
+        fns{i}(varargin{:});
     end
+else
+    for i = 1:length(fns)
+        fns(i).fn(varargin{:}, fns(i).args{:});
+    end
+end
+end
+
+function v = trafocall(fn, x, y)   
+v = zeros(1, length(fn));
+if iscell(fn)
+    for i = 1:length(fn)
+        if isempty(fn{i})
+            v(i)
+            v(i) = fn{i}(x, y);
+    end
+else
+    for i = 1:length(fn)
+        v(i) = fn(i).fn(x, y, fn(i).args{:});
+    end
+end
 end
